# roguelike

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml  refactor.yml  test.yml
assets/: room.txt
assets/rooms/: room1.txt
include/: colors.h  coordinate.h  enemy.h  entity.h  fov.h  game.h  level.h  logger.h  player.h  render_stack.h  renderer.h  room.h  terminal_graphics.h  tile.h  ui.h  vector2d.h
include/core/: colors.h  game.h  logger.h
include/entities/: enemy.h  entity.h  fov.h  player.h
include/layers/: debug_layer.h  entity_layer.h  hud_layer.h  map_layer.h
include/render/: renderer.h  ui.h
include/render/layers/: debug_layer.h  entity_layer.h  hud_layer.h  map_layer.h
include/world/: fov.h  level.h  projectile.h  room.h  tile.h  weapon.h
scripts/: build-debug.sh  build-release.sh
src/: colors.cpp  enemy.cpp  entity.cpp  fov.cpp  game.cpp  level.cpp  logger.cpp  main.cpp  player.cpp  render_stack.cpp  renderer.cpp  room.cpp  terminal_graphics.cpp  tile.cpp
src/core/: colors.cpp  game.cpp  logger.cpp
src/entities/: enemy.cpp  entity.cpp  fov.cpp  player.cpp
src/layers/: debug_layer.cpp  entity_layer.cpp  hud_layer.cpp  map_layer.cpp
src/render/: render_stack.cpp  renderer.cpp
src/render/layers/: debug_layer.cpp  entity_layer.cpp  hud_layer.cpp  map_layer.cpp
src/world/: fov.cpp  level.cpp  projectile.cpp  room.cpp  tile.cpp  weapon.cpp
